# AIDesktopPilot

./: .gitignore  requirements.txt  vcpkg.json
cpp_module/: CMakeLists.txt  agent.cpp  agent_screenshot.cpp  agent_webcam.cpp  vcpkg.json
cpp_module/helper/: CMakeLists.txt  dxdiag.cpp  dxdiag.hpp  utils.cpp  utils.hpp  yolo.cpp  yolo.hpp
python_module/: requirements.txt
python_module/yolo_train/: pt_to_onnx.py  trainer.py
